rtg_tests/negative/syntax/go.mod
module example.com/rtgtests/negative/syntax

go 1.25
